# xtensor-asv

./: .gitignore  asv.conf.json  index.json  info.json  loop_tags.sh  regressions.json  regressions.xml  setup.sh  tags
benchmarks/: __init__.py  benchmarks.py
benchmarks/cpp/: CMakeLists.txt  build_extension.sh  module.cpp  numpy_benchmark_setup.hpp
benchmarks/cpp/numpy_benchmarks/: allpairs_distances_loops.hpp  arc_distance.hpp  conv.hpp  create_grid.hpp  diffusion.hpp  harris.hpp  helper.hpp  hyantes.hpp  julia.hpp  laplacien.hpp  log_likelihood.hpp  main.cpp  make_decision.hpp  reverse_cumsum.hpp
graphs/summary/: benchmarks.NumpyBenchmarksSuite.time_allpairs_loops.json  benchmarks.NumpyBenchmarksSuite.time_arcdistance.json  benchmarks.NumpyBenchmarksSuite.time_conv.json  benchmarks.NumpyBenchmarksSuite.time_create_grid.json  benchmarks.NumpyBenchmarksSuite.time_diffusion.json  benchmarks.NumpyBenchmarksSuite.time_harris.json  benchmarks.NumpyBenchmarksSuite.time_hyantes.json  benchmarks.NumpyBenchmarksSuite.time_julia.json  benchmarks.NumpyBenchmarksSuite.time_laplacian_manual.json  benchmarks.NumpyBenchmarksSuite.time_laplacian_strided_view.json  benchmarks.NumpyBenchmarksSuite.time_laplacian_view.json  benchmarks.NumpyBenchmarksSuite.time_loglikelihood.json  benchmarks.NumpyBenchmarksSuite.time_reverse_cumsum.json  benchmarks.XSuite.time_add.json  benchmarks.XSuite.time_complex_expr.json  benchmarks.XSuite.time_fma.json  benchmarks.XSuite.time_many_leaf_expr.json  (+237 more)
scripts/: generate_track_code.py  get_historical_tags.py  install_deps.py
(+229 files in other folders)
